src/style.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v8.3.6,
* Autoprefixer: v10.3.1
* Browsers: last 4 version
*/

@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap");

* {
    margin: 0;
    padding: 0;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    -webkit-box-shadow: none !important;
    box-shadow: none !important;
}

html {
    font-size: 16px;
}
body {
    font-family: "Open Sans", sans-serif;
    position: relative;
}

:root {
    --font-size-ten: 0.933rem;
    --font-size-eleven: 1.1rem;
    --font-size-twelve: 1.1rem;
    --font-size-eight: 0.767rem;
    --font-size-seven: 0.683rem;
    --font-size-fourteen: 1.267rem;
    --font-size-eighteen: 1.6rem;
    --font-size-fourty: 3.533rem;
    --font-size-sixteen: 1.433rem;
    --green-color: #76cc11;
    --soft-gray: #fafafa;
    --bg-gray: rgb(217, 217, 217);
    --gray: rgb(191, 191, 191);
    --darker-gray: rgb(127, 127, 127);
    --red-color: #ff0000;
}

.red-color {
    color: var(--red-color);
}

.font-fourteen {
    font-size: var(--font-size-fourteen) !important;
}

p {
    margin-bottom: 0;
}

main {
    margin: auto;
    min-height: calc(100vh);
}

.eightpx-text {
    font-size: var(--font-size-eight);
}

.gray-text {
    color: var(--darker-gray);
}

.details
    .bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
    width: 95px;
    border-radius: 5px;
}

.currency-picker-cont .btn:not(:disabled):not(.disabled) {
    padding: 0.5rem 0;
}

.details .filter-option.pull-left {
    font-weight: 700;
    font-size: 1.6rem;
}

.details .abrev {
    top: 50%;
    left: 0%;
    -webkit-transform: translate(0%, -50%);
    -ms-transform: translate(0%, -50%);
    transform: translate(0%, -50%);
}

.details .btn {
    padding: 0;
}

.details .abrev-text-3 {
    font-weight: 700;
    font-size: var(--font-size-eighteen);
}

.bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
    width: 65px;
}

.country-container
    .bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
    width: 55px;
}

.btn-default.active,
.btn-default:active,
.btn-default:hover,
.btn-default:focus,
.open > .dropdown-toggle.btn-default {
    background: none !important;
    outline: none !important;
}

button {
    outline: none !important;
}
.bootstrap-select .dropdown-toggle:focus {
    outline: none !important;
}
.btn-group.open .dropdown-toggle {
    -webkit-box-shadow: none;
    box-shadow: none;
}
.btn-default {
    border: none;
    outline: none;
    background-color: white;
}
.filter-option.pull-left {
    color: white !important;
}

.dropdown-menu.inner {
    max-height: 240px !important;
}
.container {
    position: relative;
    width: -webkit-fit-content;
    width: -moz-fit-content;
    width: fit-content;
    margin: 0;
    padding: 0 5px !important;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-right: 1rem;
}

.container.currency-container {
    margin-top: 0.9rem;
    height: -webkit-fit-content;
    height: -moz-fit-content;
    height: fit-content;
    padding: 0 !important;
    width: fit-content;
    margin-right: 0.7rem;
}

.container.country-container {
    margin-right: 0;
    padding: 0px !important;
}

.country-container {
    position: relative;
}

.country-container .btn {
    padding-left: 0;
}

.nav .container:hover .abrev {
    color: var(--green-color) !important;
}

.btn-light {
    background: none !important;
    border: none !important;
}
.bootstrap-select .dropdown-toggle .filter-option-inner-inner {
    color: transparent;
}
.show > .btn-light.dropdown-toggle {
    background: none;
    border: none;
}

.dropdown-toggle::after {
    display: none;
}

.left-container {
    background-color: white;
    width: 50%;
    padding: 1rem 0rem;
    position: relative;
    padding-top: 0;
    padding-bottom: 2rem;
    border-right: 1px solid var(--bg-gray);
}

.left-container h1 {
    margin-bottom: 0;
}

.details {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    padding: 0 5rem;
    width: fit-content;
    margin: auto;
}
.collapse:not(.show) {
    display: block;
    height: 0px !important;
    overflow: hidden;
    margin-top: 0 !important;
}
.abrev-text-1,
.abrev-text-2 {
    margin: 0;
    text-align: left;
}
.caret {
    display: none;
}
.abrev {
    background-color: white;
    position: absolute;
    top: 50%;
    -webkit-transform: translateY(-55%);
    -ms-transform: translateY(-55%);
    transform: translateY(-55%);
    z-index: 99;
    left: 0px;
    pointer-events: none;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top: 0.15rem;
}

.abrev:hover {
    color: #76cc11 !important;
}

.abrev.currency {
    border: 1px solid black;
    padding: 0.05rem 0.5rem;
    border-radius: 5px;
}

.nav-icon {
    margin-right: 0.3rem;
    font-size: 1.3333rem;
}

.nav-icon.location {
    margin-bottom: 0rem;
    font-size: 1.05rem;
}

.lang-container .abrev {
    left: 50% !important;
    -webkit-transform: translate(-50%, -55%);
    -ms-transform: translate(-50%, -55%);
    transform: translate(-50%, -55%);
}
.lang-container {
    margin-right: 1rem;
}
.angle-icon {
    margin-left: 0.5rem;
}

a {
    text-decoration: none !important;
}

a:hover,
a:active {
    text-decoration: none;
    color: initial;
}
/* ... */

